# intellern

./: .gitignore  README.md
intellern-backend/: pyproject.toml  requirements-dev.txt  requirements.txt
intellern-backend/app/: main.py
intellern-backend/app/config/: database.py  settings.py
intellern-backend/app/core/: exceptions.py  security.py
